
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mohaf-afri"
version = "0.1.0"
description = "A research framework for Multi-Objective Hierarchical Auction Framework (MOHAF) for IoT resource allocation."
authors = [
    {name = "Kushagra Agrawal", email = "kush4409@gmail.com"},
    {name = "Polat Goktas", email = "polat.goktas@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "networkx",
    "scipy",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/afrilab/MOHAF-Resource-Allocation/"
"Bug Tracker" = "https://github.com/afrilab/Github-MOHAF/issues"
